# dropfly

./: .gitignore  AUTOSAVE-PROGRESS-SYSTEM.md  CLAUDE-IMPROVED.md  CLAUDE.md  CozyPaws-PRD.md  FIGMA-TRADING-DASHBOARD-PROMPT.md  FRONTEND-COMPATIBILITY-FRAMEWORK.md  IMPLEMENTATION-PATTERNS.md  JOB_SEARCH_STRATEGY.md  POWER-USER-CHEATSHEET.md  PRD-BRIEF.md  PROJECT-REGISTRY.md  README.md  RIO_ALLEN_RESUME_REAL.md  SECURITY-AUDIT-ENHANCEMENT.md  SESSION-MEMORY.md  SESSION-STATE.md  STARTUP-REQUIREMENTS-FRAMEWORK.md  SUPABASE-AUTOMATED-MIGRATIONS-SOLUTION.md  SYSTEM-PROMPT-RECOMMENDATIONS.md  TECHNICAL-SPEC-FOR-PRD.md  TRADEFLY-DEPLOYMENT-STATUS.md  VERSION-CONTROL-SYSTEM.md  VERSIONS.md  apply-system-structure.sh  attorney-dashboard.html  auto-commit.sh  compare-sites.spec.ts  cozypaws-api-spec.yaml  create-demo.sh  package-lock.json  package.json  quick-rollback.sh  run-migration.py  show-both-sites.spec.ts  supabase-migration-001.sql  tailwind.config.js  test-final-fix.spec.ts  test-localhost-styling.spec.ts  test-original-localhost.spec.ts  (+5 more)
DropFly-PROJECTS/dropfly-agent/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
DropFly-PROJECTS/dropfly-agent/channels/: Dockerfile  package.json  tsconfig.json
DropFly-PROJECTS/dropfly-agent/channels/src/: index.ts
DropFly-PROJECTS/dropfly-agent/channels/src/adapters/: slack.ts  (+4 more)
DropFly-PROJECTS/dropfly-agent/infrastructure/docker/: Caddyfile  Dockerfile.sandbox
DropFly-PROJECTS/dropfly-agent/infrastructure/scripts/: deploy.sh  health-check.sh  setup-instance.sh
DropFly-PROJECTS/dropfly-agent/infrastructure/terraform/: .gitignore  ec2.tf  main.tf  outputs.tf  security.tf  terraform.tfvars.example  variables.tf
DropFly-PROJECTS/dropfly-agent/src/agents/: __init__.py  ceo_agent.py  communication_agent.py  deploy_agent.py  design_agent.py  engineering_agent.py  factory.py  intake_agent.py  mba_agent.py  qa_agent.py  research_agent.py
DropFly-PROJECTS/dropfly-agent/src/config/: models.py  settings.py
DropFly-PROJECTS/dropfly-agent/src/core/: __init__.py  agent_bus.py  agent_pool.py  base_agent.py  brain_loader.py  credential_manager.py  memory_client.py  providers.py  tool_registry.py
DropFly-PROJECTS/dropfly-agent/src/execution/: __init__.py  computer_control.py  sandbox.py  workspace.py
DropFly-PROJECTS/dropfly-agent/src/gateway/: __init__.py  auth.py  deps.py  server.py  session.py  websocket.py
DropFly-PROJECTS/dropfly-agent/src/tools/: __init__.py  browser.py  code_analysis.py  deploy_tools.py  docker_tools.py  email_tools.py  file_system.py  git_tools.py  shell.py  supabase_tools.py  twilio_tools.py  voice_tools.py  web_search.py
DropFly-PROJECTS/dropfly-agent/tests/test_core/: test_agent_bus.py  test_tool_registry.py
prototype_x1000/agents/: README.md  __init__.py  pyproject.toml
prototype_x1000/agents/brain_builder/: __init__.py  brain_builder_agent.py  quality_validator.py
prototype_x1000/agents/ceo/: __init__.py  brain_selector.py  ceo_agent.py  task_decomposer.py
prototype_x1000/agents/cli/: __init__.py  main.py
prototype_x1000/agents/core/: __init__.py  base_agent.py  brain_loader.py  memory_client.py
prototype_x1000/agents/memory/: __init__.py  auto_logger.py  pattern_extractor.py
prototype_x1000/agents/specialists/: __init__.py  design_agent.py  engineering_agent.py  mba_agent.py  specialist_factory.py
prototype_x1000/agents/tools/: __init__.py
(+1820 files in other folders)
